# django-logkit

./: .env.json.example  .env.plain.example  README.md  django-logkit.plain.sample.ini  django-logkit.sample.ini  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
django_logkit/: __init__.py  celery.py  config.py  filters.py  formatters.py  middleware.py  request_id.py
tests/: test_celery.py  test_config.py  test_filters_and_middleware.py  test_formatters.py  test_request_id.py
