[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "django-logkit"
version = "0.1.0"
description = "Reusable Django logging configuration helpers."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Amogha" },
]
dependencies = [
    "Django>=4.2",
]

[project.optional-dependencies]
color = [
    "colorlog>=6.8.0",
]

[tool.setuptools.packages.find]
include = ["django_logkit*"]
