[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "django-logkit"
version = "0.1.0"
description = "Reusable Django logging configuration helpers."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Amogha Hegde" },
]
dependencies = []

[project.optional-dependencies]
color = [
    "colorlog>=6.8.0",
]
json = [
    "orjson>=3.10.0",
]
test = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
include = ["django_logkit*"]
