[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "django-logkit"
version = "0.1.0"
description = "Reusable Django logging configuration helpers."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Amogha Hegde" },
]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 6.0",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",

]
dependencies = [
    "django>=3.2",
]

[project.optional-dependencies]
color = [
    "colorlog>=6.8.0",
]
json = [
    "orjson>=3.10.0",
]
test = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
include = ["django_logkit*"]
